tambah warna sedikit

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -16,6 +16,12 @@ article {
 
 footer{
 	text-align: center;
+	style="font-family: arial; 
+	background-color: dimgray;
+}
+
+.twarna{
+	background-color: dimgray;
 }
 
 img{
